#298 Add support for alias vault URLs - Adds aliases to the vault objects - Changes vault resolution logic to use either the vault URI or one of the aliases (make sure aliases are unique as well) - Adds vault URI parameter to converters to replace baked in values with alias - Changes create vault management endpoint to optionally define aliases for a vault - Adds vault management endpoint to add/remove aliases for existing vaults - Adds new LOWKEY_VAULT_ALIASES argument to allow automatic alias creation on start-up - Adds methods to add aliases when using Testcontainers - Adds tests for the new flows - Updates readmes
#300 Using non-standard IP addresses
- Adds methods to allow custom certificate usage with Testcontainers
- Adds methods to add additional arguments when using Testcontainers
- Changes ApacheHttpClient constructor to allow setting any trust strategy and hostname verifier
- Adds new tests
- Updates readmes

{minor}

Signed-off-by: Esta Nagy <nagyesta@gmail.com>